static/assets/scss/sdhacks.scss
//Include fonts
@import 'https://fonts.googleapis.com/css?family=Open+Sans|Slabo+27px|Titillium+Web|Source';
@import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300,200';

//Include Foundation
@import 'foundation-sites/foundation.scss';
@include foundation-everything(true);

@import 'bem.scss';

h2 {
  text-transform: uppercase;
  font-weight: bold;
  text-align: center;
  color: $primary-color;
}

p {
  font-size: 16pt;
}

footer {
  border-image: url(/assets/img/hexagon_border-dark.svg) 250 0 215 repeat;
  border-style: solid;
  border-bottom-width: 0px !important;
  background-clip: padding-box;
  background-color: #106F87;
  text-align: center;
  color: $white;
  padding-bottom: 20px;
  bottom: 0;

  @media #{$large-up} {
    height: 190px;
  }

  @media #{$medium-up} {
    img {
    }

    p {
      line-height: 50px;
    }
  }
}

.about {
  font-size: 18pt;
}

.last-year {
  text-align: center;

  .stat {
    font-size: 36pt;
    font-weight: 300;

    @media #{$medium-up} {
      font-size: 72pt;
    }

    &--blue {
      color: darken($primary-color, 10);
    }

    &--yellow {
      color: darken($warning-color, 10);
    }
  }
}

.bordered {
  border-image: url(/assets/img/hexagon_border.svg) 250 0 215 repeat;
  border-style: solid;
  background-color: #75C8DC;
  background-clip: padding-box;
  color: $white;
  padding-top: 50px;
  margin: 50px 0 75px;

  h2 {
    color: $white;
    margin-bottom: 35px;
  }

  h3 {
    color: darken($primary-color, 10);
  }

  @media #{$medium-up} {
    .faq-left {
      padding-right: 20px;
    }
    .faq-right {
      padding-left: 20px;
    }
  }
}

.sponsor-interest {
  text-align: center;
}

.sponsors {
  padding-top: 20px;
  padding-bottom: 20px;
  text-align: center;

  img {
    margin: 20px;
    display: inline-block;
    max-height: 80px;
    max-width: 100%;
  }
}
.social-media {
  font-size: 18pt;
  @media #{$medium-up} {
    font-size: 28pt;
  }

  a:not(:last-child) {
    margin-right: 20px;
  }

  a i {
    color: white;

    &:hover {
      color: #19A3C5;
    }
  }
}

.ui-helper-hidden-accessible{display:none}

